# zephyr-nodemcu-esp32-blinky

./: .gitignore  CMakeLists.txt  README.md
boards/xtensa/nodemcu/: Kconfig.board  Kconfig.defconfig  nodemcu.dts  nodemcu.yaml  nodemcu_defconfig
src/: main.c
